<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>net.wasdev.maven.parent</groupId>
        <artifactId>parent</artifactId>
        <version>1.4</version>
        <relativePath />
    </parent>

    <groupId>io.openliberty.tools</groupId>
    <artifactId>ci.common</artifactId>
    <version>1.8.33-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>ci.common</name>

    <licenses>
        <license>
        <name>The Apache Software License, Version 2.0</name>
        <url>https://raw.github.com/openliberty/ci.common/main/LICENSE</url>
        <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:git@github.com:openliberty/ci.maven.git</connection>
        <developerConnection>scm:git:git@github.com:openliberty/ci.common.git</developerConnection>
        <url>git@github.com:openliberty/ci.common.git</url>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.13.0</version>
        </dependency>
        <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
            <version>2.3.1</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>io.openliberty.tools</groupId>
            <artifactId>liberty-ant-tasks</artifactId>
            <version>1.9.14</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>2.15.2</version>
        </dependency>
    </dependencies>
</project>
